@@ -1,0 +1,7 @@
+include *.txt
+
+recursive-include include *
+recursive-include src/AccessControl *
+
+global-exclude *pyc
+global-exclude *pyo
