@@ -4,6 +4,8 @@ Changelog
 2.13.6 (unreleased)
 -------------------
 
+- Added `manifest.in` to ensure the inclusion of the `include` directory into
+  the release.
 
 2.13.5 (2011-12-12)
 -------------------
